# CoinFlip

./: .gitignore  CMakeLists.txt  README.md  main.cpp
form/: mainscene.ui
include/: chooselevelscene.h  levelmanager.h  mainscene.h  mycoin.h  mypushbutton.h  playscene.h  recorder.h
resource/: res.qrc
src/: chooselevelscene.cpp  levelmanager.cpp  mainscene.cpp  mycoin.cpp  mypushbutton.cpp  playscene.cpp  recorder.cpp
